--- a/.hintrc
+++ b/.hintrc
@@ -8,7 +8,8 @@
       {
         "ignore": [
           "backdrop-filter",
-          "scrollbar-color"
+          "scrollbar-color",
+          "accent-color"
         ]
       }
     ]
