--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
+    "timeago.js": "^4.0.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
